syntax = "proto3";


/** Push notification types. */
enum NotificationTypes {
	Yo = 0;
	CalendarEvent = 3;
	Call = 6;
	ContactAccept = 4;
	ContactRequest = 5;
	File = 1;
	Message = 2;
}
